# snow

./: .env  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  Snow.md  Taskfile.yml  compile.sh  flake.nix  install.sh  test.nix  test.sh  treefmt.toml
adapters/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
docs/: Snow.md  snow-raw.md
nix/: Cargo.toml  Taskfile.yml
nix/src/: bindings.rs  common_ast.rs  lib.rs  old.rs  translate_ast.rs
nix/src/common_ast/: ast.rs  rnix.rs
nix/wit/: nix.wit
patches/: 0001-feat-Switch-to-in-type-signatures.patch
rnix/: Cargo.toml  Taskfile.yml
rnix/src/: bindings.rs  lib.rs
src/: Readme.md  host.rs  main.c.wasm  main.e.wasm  main.gr  main.gr.wasm  main.gr.wat  main.rs  nix.rs  snow.gr  stream.gr
src/ast/: ast.gr  nix.gr
src/compiler/: ast.gr  compile.gr  location.gr
src/compiler/generation/: nix.gr  snow.gr
src/compiler/parsing/: nix.gr  snow.gr
src/libs/: fs.gr  grainPrint.gr  grain_print.gr  host.gr  host.gr.wasm  parent.gr  reaper.gr  reaper.gr.wasm  snow.gr  snow.gr.wasm
tasks/: Taskfile.yml  grain_component.ab  grain_component.sh
wit/: .gitignore  Taskfile.yml  nix.wit  snow.wit  wit.toml
wit-bindings/: host.wit
