[package]
authors = ["spotandjake"]
edition = "2021"
name = "snow"
version = "0.1.0"
[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
# cursive = "0.11.2"
# failure = "0.1.5"
rnix = { git = "https://github.com/nix-community/rnix-parser", rev = "01e65829a56b772ad37881ab51680ff8fcd45de3" }
wasmtime = "27.0.0"
wasmtime-wasi = "27.0.0"
# rowan = "0.5.0"
