[package]
name = "nix"
version = "0.1.0"
edition = "2021"

[dependencies]
rnix = "0.11.0"
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "spotandjake:snow"
target = "spotandjake:snow/rnix@0.0.12"

[package.metadata.component.dependencies]
